--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,16 +14,12 @@ jobs:
     runs-on: ubuntu-latest
     container: pandoc/latex
     steps:
-      - uses: actions/checkout@v2
-      - name: creates output
-        with:
-          path: src
       - name: Pushes to another repository
         uses: cpina/github-action-push-to-another-repository@master
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
-          source-directory: 'output'
+          source-directory: 'src'
           destination-github-username: 'LeandrodaSilva'
           destination-repository-name: 'LeandrodaSilva.github.io'
           user-email: ld_silva13@hotmail.com
