--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
-          source-directory: 'src'
+          source-directory: '.'
           destination-github-username: 'LeandrodaSilva'
           destination-repository-name: 'LeandrodaSilva.github.io'
           user-email: ld_silva13@hotmail.com
