--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           source-directory: 'build'
           destination-github-username: 'LeandrodaSilva'
-          destination-repository-name: 'LeandrodaSilva.github.io/tree/dev'
+          destination-repository-name: 'LeandrodaSilva.github.io'
           user-email: ld_silva13@hotmail.com
